page factory is initializing